--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
 <head>
   <title>Growth-Based Land Need Simulator</title>
-  <link rel="stylesheet" href="style.css"> </head>
+  <link rel="stylesheet" href="style.css">
+</head>
 <body>
-  <div id="app"> </div> 
-  <script src="https://cdn.jsdelivr.net/npm/recharts@2.1.16/umd/Recharts.min.js"></script>
-  <script src="script.js"></script>
+  <div id="app"></div>
+  <script src="https://cdn.jsdelivr.net/npm/recharts@2.1.16/umd/Recharts.min.js"></script> 
+  <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+  <script src="script.js" type="module"></script> 
 </body>
 </html>
