--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <title>Growth-Based Land Need Simulator</title>
   <style>
-    /* Add your basic styles here, for example: */
+    /* Add your basic styles here */
     body {
-      font-family: sans-serif; 
+      font-family: sans-serif;
     }
     label {
       display: block;
@@ -17,10 +17,13 @@
   </style>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app"></div> 
+
   <script src="https://cdn.jsdelivr.net/npm/recharts@2.1.16/umd/Recharts.min.js"></script>
   <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-  <script src="script.js" type="module"></script>
+
+  <script src="neighborhoods.js" type="module"></script> 
+  <script src="script.js" type="module"></script> 
 </body>
 </html>
